deploy: julianbrooks/comp2850-hci-mdbook@ae87ed12bf5187c9e5359a605e7c326be4e22163

--- a/assessment/rubric.html
+++ b/assessment/rubric.html
@@ -682,7 +682,7 @@ At least 1 WCAG criterion improved (fail → pass)</li>
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../references/glossary.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../assessment/COMP2850-HCI-Assessment-Worksheet-CONCISE.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -696,7 +696,7 @@ At least 1 WCAG criterion improved (fail → pass)</li>
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../references/glossary.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../assessment/COMP2850-HCI-Assessment-Worksheet-CONCISE.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
